--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
 							<span style="font-size:24px"><a href="https://scholar.google.com/citations?user=BcBltw8AAAAJ&hl=en">Jay N. Paranjape</a></span>
 						</center>
 					</td>
-                    <td align=center colspan="2">
+					<td align=center colspan="2">
+						<center>
+							<span style="font-size:24px"><a href="https://scholar.google.com/citations?hl=en&user=3ftbE9oAAAAJ&hl=en">Celso de Melo</a></span>
+						</center>
+					</td>
+                    			<td align=center colspan="2">
 						<center>
 							<span style="font-size:24px"><a href="https://scholar.google.com/citations?user=AkEXTbIAAAAJ&hl=en">Vishal M. Patel</a></span>
 						</center>
