--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<tr>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:24px"><a href='TBF'>[Paper]</a></span>
+							<span style="font-size:24px"><a href='https://arxiv.org/abs/2407.06839'>[Paper]</a></span>
 						</center>
 					</td>
 					<td align=center width=120px>
@@ -265,7 +265,7 @@
 	<table align=center width=850px>
 		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
-			<td><a href="TBF"><img class="layered-paper-big" style="height:175px" src="./paper_material/paper.png"/></a></td>
+			<td><a href="https://arxiv.org/abs/2407.06839"><img class="layered-paper-big" style="height:175px" src="./paper_material/paper.png"/></a></td>
 			<td><span style="font-size:14pt"><br>
 				<b>A Mamba-based Siamese Network for Remote Sensing Change Detection</b><br>
 				<br>
